# za

./: .gitattributes  .travis.yml  AUTHORS  Cargo.toml  Dockerfile  README.md  codecov.yml  travis.yaml
.github/workflows/: audit.yaml  clippy.yaml  coverage.yml  rustfmt.yaml
bigsnark/: Cargo.toml
bigsnark/src/: lib.rs  rocks.rs
binding/c/native/: Cargo.toml
binding/c/native/src/: lib.rs
binding/flutter/: .gitignore  README.md  ndk.sh  pubspec.yaml
binding/flutter/android/app/: build.gradle
binding/flutter/android/app/src/main/: AndroidManifest.xml
binding/flutter/cargo/: .gitignore  Cargo.toml  build.sh
binding/flutter/cargo/src/: lib.rs  middleware.h
binding/flutter/ios/Runner/: AppDelegate.swift  Info.plist  MiddleWare.swift  Runner-Bridging-Header.h
binding/flutter/ios/Runner.xcodeproj/: project.pbxproj
binding/flutter/lib/: main.dart  snarkcircuit.dart
binding/flutter/native/: Cargo.toml  Makefile
binding/flutter/native/src/: lib.rs
binding/go/: go.mod  lib.go
binding/go/test/: Makefile  test.go
binding/golang/: go.mod  go.sum  lib.go
binding/golang/native/: Cargo.toml
binding/golang/native/src/: lib.rs
binding/golang/test/: test.go
binding/js/: Makefile  README.md  package-lock.json  package.json
binding/js/lib/: index.js
binding/js/native/: Cargo.toml
binding/js/native/src/: lib.rs
binding/js/test/: test.js
binding/python3/: Makefile
binding/python3/native/: Cargo.toml
binding/python3/native/src/: lib.rs
binding/python3/test/: test.py
cli/: Cargo.toml
cli/src/: cuda.rs  main.rs
compiler/: Cargo.toml
compiler/src/: lib.rs
compiler/src/algebra/: constants.rs  error.rs  fs.rs  lc.rs  mod.rs  qeq.rs  traits.rs  types.rs  value.rs
compiler/src/cuda/: format.rs  mod.rs
compiler/src/evaluator/: constraint.rs  error.rs  eval.rs  mod.rs  retval.rs  scope.rs  signal.rs  test.rs  types.rs  utils.rs
compiler/src/optimizer/: canonize.rs  mod.rs
compiler/src/storage/: cuda.rs  error.rs  factory.rs  mod.rs  ram.rs  rocks.rs  types.rs  utils.rs
compiler/src/tester/: embeeded.rs  error.rs  mod.rs  report.rs
compiler/src/types/: constraint.rs  mod.rs  signal.rs  utils.rs
docs/: circom.jison  exec.js  lcalgebra.js  notes.txt
example/: Makefile  circuit.za  input.json
interop/: Cargo.toml
interop/circomlib/: 120M.circom  all_tests.circom  babyjub.circom  bitify.circom  claimsrootupdate.circom  comparators.circom  compconstant.circom  constants.circom  eddsamimc.circom  escalarmulany.circom  escalarmulfix.circom  mimc.circom  montgomery.circom  mux3.circom  pedersen.1.circom  pedersen.circom  sha256_2.circom  sha256_main.circom  sha256compression.circom  smthash.circom  smtprocessor.circom  smtverifier.circom
interop/circuits/: all_tests.za
interop/circuits/circomlib/: COMMIT  all_tests.circom  package-lock.json
interop/circuits/circomlib/circuits/: aliascheck.circom  babyjub.circom  binsum.circom  bitify.circom  comparators.circom  eddsa.circom  eddsamimc.circom  eddsamimcsponge.circom  eddsaposeidon.circom  escalarmul.circom  escalarmulany.circom  escalarmulfix.circom  escalarmulw4table.circom  mimc.circom  mimcsponge.circom  montgomery.circom  multiplexer.circom  mux1.circom  mux2.circom  mux3.circom  mux4.circom  pedersen.circom  pedersen_old.circom  pointbits.circom  poseidon.circom  sign.circom
interop/circuits/circomlib/circuits/sha256/: maj.circom  sha256.circom  sha256_2.circom  sha256compression.circom  shift.circom  sigma.circom  sigmaplus.circom  t1.circom  t2.circom  xor3.circom
interop/circuits/circomlib/circuits/smt/: smthash_poseidon.circom  smtlevins.circom  smtprocessor.circom  smtprocessor_mimc.circom  smtprocessor_poseidon.circom  smtprocessorsm.circom  smtverifier.circom  smtverifier_mimc.circom  smtverifier_poseidoncircom
interop/circuits/circomlib/test/: smtprocessor.js  smtverifier.js
interop/circuits/circomlib/za_test/: all.za  babyjub.za  comparators.za  eddsamimc.za  eddsaposeidon.za  sha256.za  smtprocessor.za  smtverifier.za
interop/circuits/cuda/: circuit.circom
interop/circuits/rollupnc_ying/: update_state_verifier.circom
interop/circuits/rollupnc_ying/helpers/: balance_existence_check.circom  get_merkle_root.circom  if_gadgets.circom  leaf_existence.circom  tx_existence_check.circom
interop/circuits/trustlessrelayer/: claimsrootupdate.circom
interop/circuits/voting/: circuit.circom  circuit_with_libs.circom  circuit_with_libs.input.json  circuit_with_libs_a.circom  input.json  proof.json  proving.key  verifier.sol
interop/rollup/: balance_existence_check.circom  balance_leaf.circom  get_merkle_root.circom  leaf_existence.circom  subtree_circuit.circom  tx_existence_check.circom  tx_leaf.circom  update_42.circom  update_state_verifier.circom  withdraw_signature_verifier.circom
interop/src/: lib.rs
jsbinding/: package-lock.json  package.json
jsbinding/native/: Cargo.toml
jsbinding/native/src/: lib.rs
jsbinding/test/: test.js
parser/: Cargo.toml  build.rs
parser/src/: ast.rs  display.rs  error.rs  lang.lalrpop  lib.rs  parse.rs
parser/test/: babyjub.circom  binsub.circom  binsum.circom  bitify.circom  ch.circom  claimsrootupdate.circom  comparators.circom  eddsa.circom  eddsamimc.circom  escalarmul.circom  escalarmulfix.circom  escalarmulw4table.circom  gates.circom  mimc.circom  montgomery.circom  mux4.circom  pedersen.circom  pointbits.circom  rotate.circom  sha256_2.circom  sha256compression.circom  sigma.circom  sigmaplus.circom  smtlevins.circom  smtprocessor.circom  smtverifier.circom  t1.circom  t2.circom  test.circom
prover/: Cargo.toml
prover/src/: lib.rs
prover/src/bellman/: mod.rs
prover/src/cuda/: format.rs  mod.rs
prover/src/groth16/: error.rs  ethereum.rs  format.rs  helper.rs  mod.rs  parse.rs  prover.rs  ram.rs
src/: main.rs
src/algebra/: constants.rs  error.rs  fs.rs  lc.rs  mod.rs  qeq.rs  traits.rs  types.rs  value.rs
src/evaluator/: canonize.rs  error.rs  eval.rs  mod.rs  retval.rs  scope.rs  signal.rs  test.rs  types.rs
src/optimizer/: mod.rs
(+2 files in other folders)
