[package]
name = "circom2"
version = "0.1.0"
authors = ["0Kims"]
edition = "2018"

[dependencies]
num-bigint = "0.2.2"
num-traits = "0.2.6"
codespan = "0.2.1"
codespan-reporting = "0.2.1"
circom2-parser = { path = "parser" }
lazy_static = "1.3.0"
blake2-rfc = "0.2.18"
hex = "0.3.2"

[workspace]
members = [
    "parser"
]

# for
#   cargo flamegraph --bin circom2 -- test.circom
#[profile.release]
#debug = true
