[package]
name = "circom2-bigsnark"
version = "0.1.0"
authors = ["0Kims"]
edition = "2018"

[dependencies]
circom2-parser = { path = "../parser" }
circom2-compiler = { path = "../compiler" }
rocksdb = "0.10.1"
serde = "1.0.82"
serde_cbor = "0.9.0"
serde_derive = "1.0.91"
rand = "0.6.1"

[dependencies.num-bigint]
version = "0.2.2"
default-features = false
features = ["serde"]