[package]
name = "circom2-cli"
version = "0.1.0"
authors = ["0Kims"]
edition = "2018"

[dependencies]
codespan = "0.2.1"
codespan-reporting = "0.2.1"
circom2-parser = { path = "../parser" }
circom2-compiler = { path = "../compiler" }
circom2-prover = { path = "../prover" }
circom2-bigsnark = { path = "../bigsnark" }
stderrlog = "0.4.1"
structopt = "0.2.14"
log = "0.4.6"

[[bin]]
name = "circom2"
path = "src/main.rs"