[package]
name = "za-cli"
version = "0.1.0"
authors = ["0Kims"]
edition = "2018"

[dependencies]
codespan = "0.2.1"
codespan-reporting = "0.2.1"
za-parser = { path = "../parser" }
za-compiler = { path = "../compiler" }
za-prover = { path = "../prover" }
stderrlog = "0.4.1"
structopt = "0.2.14"
log = "0.4.6"
byteorder = "1.3.1"

[[bin]]
name = "za"
path = "src/main.rs"
