[package]
name = "circom2-compiler"
version = "0.1.0"
authors = ["0Kims"]
edition = "2018"

[dependencies]
num-traits = "0.2.6"
codespan = "0.2.1"
codespan-reporting = "0.2.1"
circom2-parser = { path = "../parser" }
lazy_static = "1.3.0"
blake2-rfc = "0.2.18"
hex = "0.3.2"
rocksdb = "0.10.1"
serde = "1.0.82"
serde_cbor = "0.9.0"
serde_derive = "1.0.91"

[dependencies.num-bigint]
version = "0.2.2"
default-features = false
features = ["serde"]