[package]
name = "circom2-compiler"
version = "0.1.0"
authors = ["0Kims"]
edition = "2018"

[dependencies]
circom2-parser = { path = "../parser" }
num-traits = "0.2.6"
lazy_static = "1.3.0"
blake2-rfc = "0.2.18"
hex = "0.3.2"
serde = "1.0.82"
serde_cbor = "0.10.2"
serde_derive = "1.0.91"
rand = "0.6.1"
log = "0.4.6"
byteorder = "1.3.1"
itertools = "0.8.0"
fxhash = "0.2.1"

[dependencies.num-bigint]
version = "0.2.2"
default-features = false
features = ["serde"]

[target.'cfg(not(target_os = "android"))'.dependencies]
codespan = { version = "0.3.0"}
codespan-reporting = { version = "0.3.0"}
