[package]
name = "za-parser"
version = "0.1.0"
authors = ["0Kims"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

[build-dependencies]
rustc-hex = "2.0.1"
lalrpop = "0.16.3"
num-bigint = "0.2.2"
num-traits = "0.2.6"

[dependencies]
lalrpop-util = "0.16.3"
regex = "1.1.2"
rustc-hex = "2.0.1"
num-bigint = "0.2.2"
num-traits = "0.2.6"
serde = "1.0.82"
serde_derive = "1.0.91"
