[package]
name = "circom2-prover"
version = "0.1.0"
authors = ["0Kims"]
edition = "2018"

[dependencies]
circom2-compiler = { path = "../compiler" }
circom2-parser = { path = "../parser" }
num-traits = "0.2.6"
serde = "1.0.82"
serde_cbor = "0.9.0"
serde_derive = "1.0.91"
rand = "0.4.0"
log = "0.4.6"
byteorder = "1.3.1"
bellman = { git = "https://github.com/matterinc/bellman", tag = "0.2.0" }
pairing = { git = "https://github.com/matterinc/pairing", tag = "0.16.2" }
ff = { git = 'https://github.com/matterinc/ff', features = ["derive"], tag = "0.5" }
lazy_static = "1.3.0"
regex = "0.2"
serde_json = "1.0.39"

[dependencies.num-bigint]
version = "0.2.2"
default-features = false
features = ["serde"]

