[package]
name = "circom2-prover"
version = "0.1.0"
authors = ["0Kims"]
edition = "2018"

[dependencies]
circom2-compiler = { path = "../compiler" }
circom2-parser = { path = "../parser" }
num-traits = "0.2.6"
serde = "1.0.82"
serde_cbor = "0.10.2"
serde_derive = "1.0.91"
serde_json = "1.0.39"
rand = "0.4.0"
log = "0.4.6"
byteorder = "1.3.1"
bellman = { package = "bellman_ce", git = "https://github.com/adria0/bellman", branch = "test/affinecoords" }
pairing = { package = "pairing_ce", git = "https://github.com/adria0/pairing", branch = "feature/affinecoords" }
regex = "0.2"

[dependencies.ff_ce]
version = "0.7.1"
features = ["derive"]

[dependencies.num-bigint]
version = "0.2.2"
default-features = false
features = ["serde"]

