[package]
name = "middleware"
version = "0.1.1"
authors = ["0Kims"]
description = "flutter bindings for circom2"
publish = false

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.10.1", default-features = false }

[target.aarch64-linux-android]
ar = "../NDK/arm64/bin/aarch64-linux-android-ar"
linker = "../NDK/arm64/bin/aarch64-linux-android-clang"

[target.armv7-linux-androideabi]
ar = "../NDK/arm/bin/arm-linux-androideabi-ar"
linker = "../NDK/arm/bin/arm-linux-androideabi-clang"

[target.i686-linux-android]
ar = "../NDK/x86/bin/i686-linux-android-ar"
linker = "../NDK/x86/bin/i686-linux-android-clang"

[lib]
name = "middleware"
crate-type = ["staticlib", "cdylib", "dylib"]

[dependencies]
serde_json = "1.0.24"
serde_derive = "1.0.70"
serde = "1.0.70"
circom2-prover = { path = "../../../prover" }
