[package]
name = "middleware"
version = "0.1.1"
authors = ["0Kims"]
description = "flutter bindings for circom2"
publish = false

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.10.1", default-features = false }

[lib]
name = "middleware"
crate-type = ["staticlib", "cdylib", "dylib"]

[dependencies]
serde_json = "1.0.24"
serde_derive = "1.0.70"
serde = "1.0.70"
circom2-prover = { path = "../../../prover" }
