[package]
name = "jsbinding"
version = "0.1.0"
authors = ["Za! Authors"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "jsbinding"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
stderrlog = "0.4.1"
za-prover = { path = "../../../prover" }
za-compiler = { path = "../../../compiler" }
