[package]
name = "za2py"
version = "0.1.0"
edition = "2018"

[lib]
name = "za2py"
crate-type = ["cdylib"]

[dependencies]
neon = "0.2.0"
stderrlog = "0.4.1"
za-prover = { path = "../../../prover" }
za-compiler = { path = "../../../compiler" }

[dependencies.cpython]
version = "0.2"
features = ["extension-module"]
